[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pywidevinex"
version = "1.8.3"
description = "Widevine CDM (Content Decryption Module) implementation in Python."
license = "GPL-3.0-only"
authors = ["rlaphoenix <rlaphoenix@pm.me>", "DevLARLEY"]
readme = "README.md"
repository = "https://git.gay/ready-dl/pywidevine"
keywords = ["python", "drm", "widevine", "google"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Video",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
include = [
  { path = "CHANGELOG.md", format = "sdist" },
  { path = "README.md", format = "sdist" },
  { path = "LICENSE", format = "sdist" },
]
packages = [
  { include = "pywidevine" }
]

[tool.poetry.urls]
"Issues" = "https://git.gay/ready-dl/pywidevine/issues"

[tool.poetry.dependencies]
python = ">=3.8"
protobuf = "^6.32.0"
pymp4 = "^1.4.0"
pycryptodome = "^3.19.0"
click = "^8.1.7"
requests = "^2.31.0"
Unidecode = "^1.3.7"
PyYAML = "^6.0.1"
aiohttp = {version = "^3.9.1", optional = true}

[tool.poetry.extras]
serve = ["aiohttp"]

[tool.poetry.scripts]
pywidevinex = "pywidevine.main:main"